--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "gulp-sass": "^2.3.1"
   },
   "devDependencies": {
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "gulp-sourcemaps": "^1.6.0"
   },
   "scripts": {
     "test": "test"
