--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "site on wordpress for portfolio",
   "main": "gulpfile.js",
   "dependencies": {
+    "gulp-concat": "^2.6.1",
     "gulp-sass": "^2.3.1"
   },
   "devDependencies": {
